Implement loyalty punch card feature and eligibility check

--- a/misas-thai-street-cuisine-2.0/Pages/Finalize.razor
+++ b/misas-thai-street-cuisine-2.0/Pages/Finalize.razor
@@ -171,7 +171,7 @@
         <div class="empty-cart">
             <h4>Your cart is empty</h4>
             <p>Add some items to your cart before checking out.</p>
-            <a href="/Menu" class="btn btn-primary">Browse Menu</a>
+            <a href="/" class="btn btn-primary">Browse Menu</a>
         </div>
     }
 </div>
