--- a/misas-thai-street-cuisine-2.0/_Imports.razor
+++ b/misas-thai-street-cuisine-2.0/_Imports.razor
@@ -9,3 +9,4 @@
 @using MudBlazor
 @using misas_thai_street_cuisine_2._0.Services
 @using misas_thai_street_cuisine_2._0.Models
+@using misas_thai_street_cuisine_2._0.Data
