--- a/misas-thai-street-cuisine-2.0/_Imports.razor
+++ b/misas-thai-street-cuisine-2.0/_Imports.razor
@@ -10,3 +10,4 @@
 @using misas_thai_street_cuisine_2._0.Services
 @using misas_thai_street_cuisine_2._0.Models
 @using misas_thai_street_cuisine_2._0.Data
+@using misas_thai_street_cuisine_2._0.Components
